--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-exec": "^2.1.2",
     "gulp-git": "^1.7.1",
     "knex": "^0.10.0",
+    "morgan": "^1.7.0",
     "path": "^0.12.7",
     "react": "^0.14.8",
     "react-native": "^0.23.0",
