--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^0.14.8",
     "react-native": "^0.23.0",
     "react-native-accordion": "^0.2.4",
+    "react-native-button": "^1.4.2",
     "react-native-drawer": "^2.0.0",
     "react-native-form": "^2.0.5",
     "react-native-scrollable-tab-view": "^0.4.1",
