--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "knex": "^0.10.0",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
+    "polyline": "^0.2.0",
     "react": "^0.14.8",
     "react-native": "^0.23.0",
     "react-native-accordion": "^0.2.4",
