--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "^0.23.0",
     "react-native-collapsible": "^0.5.6",
     "react-native-form": "^2.0.5",
+    "react-native-google-places-autocomplete": "^1.1.6",
     "react-native-scrollable-tab-view": "^0.4.1",
     "react-native-vector-icons": "^1.3.4",
     "react-segmented-control": "^0.2.1",
