--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "node" : "^4.4.2",
     "bcrypt": "^0.8.5",
     "bluebird": "^3.3.5",
     "body-parser": "^1.15.0",
@@ -21,7 +22,6 @@
     "react-native": "^0.23.0",
     "react-native-collapsible": "^0.5.6",
     "react-native-form": "^2.0.5",
-    "react-native-google-places-autocomplete": "^1.1.6",
     "react-native-scrollable-tab-view": "^0.4.1",
     "react-native-vector-icons": "^1.3.4",
     "react-segmented-control": "^0.2.1",
