--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "node" : "^4.4.2",
+    // "node" : "^4.4.2",
     "bcrypt": "^0.8.5",
-    "bluebird": "^3.3.5",
     "body-parser": "^1.15.0",
     "bookshelf": "^0.9.4",
     "express": "^4.13.4",
